# xls2csv

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  copy.py  entry.py  xls2csv.cpp  xls2csv.h  xls2csv.pyd
